--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="container">
                     <div class="header__wrapper">
                         <a class="header__logo">
-                            <img src="img/section/header/logo.png" alt="logo" width="96" height="98">
+                            <img src="img/section/header/logo.svg" alt="logo" width="96" height="98">
                         </a>
                         <nav class="header__nav nav">
                             <ul class="nav__list">
@@ -46,7 +46,7 @@
                                 </li>
                                 <li class="nav__item">
                                     <button class="nav__mobile_menu">
-                                        <img src="img/section/header/burger.png" alt="burger" width="59" height="59">
+                                        <img src="img/section/header/burger.svg" alt="burger" width="59" height="59">
                                     </button>
                                 </li>
                             </ul>
@@ -65,6 +65,7 @@
         </section>
 
         <section class="about">
+            <img class="about__background" src="img/section/about/bg-about.png" alt="state" width="665">
             <div class="container">
                 <h2 class="about__title">Про нас</h2>
                 <div class="about__desc">
@@ -476,9 +477,244 @@
                 </ul>
             </div>
         </section>
+
+        <section class="useful">
+            <div class="container">
+                <h2 class="useful__title">Корисні статті</h2>
+                <ul class="useful__list">
+                    <li class="useful__item">
+                        <img src="img/section/useful/image-1.jpg" alt="women" class="useful__image" width="626">
+                        <h3 class="useful__subtitle">Як пережити втрату близького</h3>
+                        <div class="useful__block">
+                            <p class="useful__desc">Втрата близької людини – це одне із найважчих випробувань, з
+                                предметами
+                                може зіткнутися людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно
+                                від
+                                того, який був зв'язок, втрата може залишити людину в стані глибокого горя та болю...
+                            </p>
+                            <button class="useful__full js-read-first">Читати статтю <img src="img/icons/long-arrow.svg"
+                                    alt="arrow" class="useful__arrow" width="81"></button>
+                        </div>
+                    </li>
+                    <li class="useful__item">
+                        <img src="img/section/useful/image-2.jpg" alt="women" class="useful__image" width="626">
+                        <h3 class="useful__subtitle">Як віддати почесті покійному</h3>
+                        <div class="useful__block">
+                            <p class="useful__desc">Коли людина йде з життя, це завжди трагічний момент та час для горя
+                                та
+                                пам'яті. Але, незважаючи на горе, люди завжди прагнуть віддати останнє прощання та
+                                почесті
+                                тим, хто пішов від нас....</p>
+                            <button class="useful__full js-read-second">Читати статтю <img
+                                    src="img/icons/long-arrow.svg" alt="arrow" class="useful__arrow"
+                                    width="81"></button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
+    <div class="backdrop">
+        <div class="modal">
+            <p class="modal__title">Залиште свої контакти та ми зв’яжемось з вами</p>
+            <form class="modal__form">
+                <input class="modal__input" type="text" name="name" placeholder="Ваше ім’я">
+                <input class="modal__input" type="text" name="phone" placeholder="Ваш телефон">
+                <button class="modal__submit" type="submit">Відправити</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="article__first">
+        <div class="content">
+            <button class="close__button js-close-article">
+                <img src="img/icons/close.svg" alt="close-icon" width="75" height="75">
+            </button>
+            <img class="article__image" src="img/section/article/image-1.jpg" alt="women" width="933">
+            <h1 class="article__title">Як пережити втрату близького</h1>
+            <p class="article__desc">Втрата близької людини - це одне із найважчих випробувань, з яким може зіткнутися
+                людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно від того, яким був зв'язок,
+                втрата може залишити людину в стані глибокого горя та болю. Нижче ми розглянемо кілька способів, які
+                допоможуть вам пережити цей тяжкий період.</p>
+            <ul class="article__list">
+                <li class="article__item">
+                    <span class="article__number">01</span>
+                    <p class="article__desc"><b>Дозвольте собі сумувати</b> Коли людина втратила близького, їй може
+                        здатися, що вона має бути сильною і не показувати свої емоції. Однак спроба забути про втрату
+                        може призвести до ще більшого болю та депресії у майбутньому. Тому необхідно дати собі час та
+                        простір, щоб пройти через горе та дозволити собі висловити свої емоції.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">02</span>
+                    <p class="article__desc"><b>Знайдіть підтримку</b> Ваша підтримка може бути будь-яким, від сім'ї та
+                        друзів до професійних консультантів чи груп підтримки. Ці люди допоможуть вам висловити свої
+                        емоції, вислухати вас та поділитися своїм досвідом та знаннями. Не соромтеся звернутися за
+                        допомогою, це може бути ключем до подолання втрати. Ми Вам допоможемо та візьмемо всі складнощі
+                        щодо організації ритуальних заходів на себе.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">03</span>
+                    <p class="article__desc"><b>Дбайте про себе</b> Коли людина переживає втрату, їй може бути важко
+                        дбати про своє здоров'я та благополуччя. Однак, гарне харчування, фізичні вправи та сон можуть
+                        допомогти впоратися з горем та знизити стрес. Знайдіть заняття, яке приносить вам задоволення,
+                        та приділіть йому час, щоб зберігати свою енергію та настрій.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">04</span>
+                    <p class="article__desc"><b>Не забувайте про пам'ять про близьке</b> Один із способів зберегти
+                        пам'ять про близького, якого більше немає, – це створити пам'ятну колекцію на його честь. Це
+                        може бути фотоальбом, записник або навіть блог. Ви також можете присвятити свій час та ресурси
+                        на допомогу іншим, щоб зберегти пам'ять про близького, наприклад, через благодійну діяльність
+                        або створення фонду.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">05</span>
+                    <p class="article__desc"><b>Не забувайте про пам'ять про ближнього</b> Один із способів зберегти
+                        пам'ять про близького, якого більше немає, – це створити пам'ятну колекцію на його честь. Це
+                        може бути фотоальбом, записник або навіть блог. Ви також можете присвятити свій час та ресурси
+                        на допомогу іншим, щоб зберегти пам'ять про близького, наприклад, через благодійну діяльність
+                        або створення фонду.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">06</span>
+                    <p class="article__desc"><b>Дайте собі час</b> Втрата близької людини може бути важкою та довгою
+                        процедурою. Не варто намагатися впоратися з усім одним махом – важливо розуміти, що горе не
+                        зникне за один день чи тиждень. Дозвольте собі час на переживання цього процесу, на прийняття
+                        своїх емоцій та розуміння того, що відбувається. Будьте терплячими і дайте собі час на
+                        відновлення.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">07</span>
+                    <p class="article__desc"><b>Не бійтеся висловлювати свої емоції</b> Коли ми стикаємося зі втратою,
+                        ми
+                        можемо відчувати широкий спектр емоцій - від гніву та болю до страху та смутку. Важливо
+                        розуміти, що ці емоції абсолютно природні та необхідні для того, щоб упоратися з горем. Не
+                        соромтеся висловлювати свої емоції і не бійтеся їх - вони допоможуть вам відновитися і впоратися
+                        з тим, що відбувається</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">08</span>
+                    <p class="article__desc"><b>Не забувайте, що ви не самотні</b> Коли людина переживає втрату, їй може
+                        здатися, що вона самотня і що ніхто не розуміє, що вона проходить через. Однак це не так –
+                        втрата близького є спільним досвідом, і багато людей стикаються з нею протягом свого життя.
+                        Знайдіть підтримку у близьких людей або групи підтримки, де ви можете обговорити свій досвід з
+                        іншими людьми, які також проходять через горе.</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">09</span>
+                    <p class="article__desc"><b>Приймайте свої почуття та рішення</b> Коли ми стикаємося з втратою, ми
+                        можемо почуватися замішаними або в безвиході. Важливо розуміти, що немає правильного чи
+                        неправильного способу справлятися з горем – кожна людина проходить через цей процес по-своєму.
+                        Приймайте свої почуття та рішення та не ставте себе під тиск.</p>
+                </li>
+            </ul>
+            <p class="article__desc">Насамкінець, втрата близької людини є важким випробуванням, яке може вимагати
+                багато часу та сил. Однак за допомогою підтримки, часу та турботи про себе, ви можете впоратися з горем
+                та знайти способи зберегти пам'ять про ваше близьке. Важливо розуміти, що кожна людина проходить через
+                процес горювання по-своєму і що немає правильного способу справлятися з втратою. Будьте терплячими і не
+                забувайте звертатися по допомогу, коли це потрібно.
+                Ніколи не забувайте, що ви не одні, і багато людей стикаються із цим важким періодом у своєму житті.
+                Найголовніше – дайте собі час та простір для проходження через цей процес, щоб знайти свій шлях до
+                зцілення та збереження пам'яті про ваше близьке.</p>
+        </div>
+    </div>
+
+    <div class="article__second">
+        <div class="content">
+            <button class="close__button js-close-article">
+                <img src="img/icons/close.svg" alt="close-icon" width="75" height="75">
+            </button>
+            <img class="article__image" src="img/section/article/image-2.jpg" alt="women" width="933">
+            <h1 class="article__title">Як пережити втрату близького</h1>
+            <p class="article__desc">Втрата близької людини - це одне із найважчих випробувань, з яким може зіткнутися
+                людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно від того, яким був зв'язок,
+                втрата може залишити людину в стані глибокого горя та болю. Нижче ми розглянемо кілька способів, які
+                допоможуть вам пережити цей тяжкий період.</p>
+            <p class="article__desc mt-30">Втрата близької людини - це одне із найважчих випробувань, з яким може
+                зіткнутися
+                людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно від того, яким був зв'язок,
+                втрата може залишити людину в стані глибокого горя та болю. Нижче ми розглянемо кілька способів, які
+                допоможуть вам пережити цей тяжкий період.</p>
+            <ul class="article__list-2">
+                <li class="article__item">
+                    <span class="article__number">01</span>
+                    <p class="article__subtitle">Крематорій</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number">02</span>
+                    <p class="article__subtitle">Поховання</p>
+                </li>
+            </ul>
+            <p class="article__desc">Ви вибираєте залежно від Ваших уподобань та можливо засад Вашої родини.</p>
+            <p class="article__desc mt-30">Після цього необхідно організувати весь ритуальний процес. До нього входить
+                чимало
+                послуг різних людей. Цей процес можна організувати самостійно, але без підготовки це може зайняти чимало
+                часу.</p>
+            <p class="article__desc mt-30">чимало часу.Нижче ми перерахуємо всі дії, які можна зробити, щоб максимально
+                віддати почесті покійному.</p>
+            <ul class="article__list-3">
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Виїзд консультанта для планування ритуального заходу із родичами</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Перевірка документів консультантом</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Замовлення священика</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Замовлення живої оркестри</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Послуги з перевезення людей до місця проведення ритуального обіду</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Прикраса могили</p>
+                </li>
+                <li class="article__item">
+                    <span class="article__number"><img src="img/icons/bullet.png" alt="bullet" width="18"
+                            height="18"></span>
+                    <p class="article__subtitle">Та інші</p>
+                </li>
+            </ul>
+            <p class="article__desc">Ці послуги можуть бути корисними для тих, хто хоче унікального та персоналізованого
+                підходу до прощання з близькою людиною, а також для тих, хто бажає спростити процес організації
+                ритуальних заходів.</p>
+            <p class="article__desc mt-30">Організатори можуть надати консультанта, який допоможе планувати ритуальні
+                заходи,
+                а також замовити священика та живу музику для створення відповідної атмосфери.</p>
+            <p class="article__desc mt-30">Доставка тіла за маршрутом, упаковка тіла в цик та прикраса могили можуть
+                бути
+                корисними для тих, хто хоче переконатися у безпечному транспортуванні тіла та створенні гідної поваги
+                оточення на цвинтарі.</p>
+            <p class="article__desc mt-30">Організація подібних процедур займає багато часу, але ми можемо зробити цей
+                процес
+                для Вас простим та зрозумілим.</p>
+            <p class="article__desc mt-30">Ми заздалегідь підготували та спростили всі етапи роботи у цій непростій
+                ситуації.
+                Тому ми ставимо мінімум запитань. І організуємо все швидко і легко, т.к. у нас налагоджено вирішення
+                всіх проблем, що виникають у процесі організації ритуального процесу.</p>
+            <p class="article__footer">Звертайтеся до нас і весь ритуальний процес стане простим. Без зайвої витрати
+                часу та сил у цей непростий момент Вашого життя.</p>
+        </div>
+    </div>
+
     <script defer src="js/main.js"></script>
+    <script defer src="js/modal.js"></script>
+    <script defer src="js/article.js"></script>
 </body>
 
 </html>
