--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ритуальні послуги</title>
+    <meta name="description" content="Агентство ритуальних послуг 'Rustrans'">
     <link rel="icon" sizes="any" type="image/svg+xml" href="./img/favicons/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,25 +22,23 @@
             <header class="header">
                 <div class="container">
                     <div class="header__wrapper">
-                        <a class="header__logo">
-                            <img src="img/section/header/logo.svg" alt="logo" width="96" height="98">
-                        </a>
+                        <img class="header__logo" src="img/section/header/logo.svg" alt="logo" width="96" height="98">
                         <nav class="header__nav nav">
                             <ul class="nav__list">
                                 <li class="nav__item">
-                                    <a class="nav__link" href="">Про нас</a>
+                                    <a class="nav__link" href="#about">Про нас</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a class="nav__link" href="">Послуги</a>
+                                    <a class="nav__link" href="#service">Послуги</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a class="nav__link" href="">Як пережити втрату близьких</a>
+                                    <a class="nav__link" href="#useful">Як пережити втрату близьких</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a class="nav__link" href="">Як віддати почесті покійному</a>
+                                    <a class="nav__link" href="#useful">Як віддати почесті покійному</a>
                                 </li>
                                 <li class="nav__item">
-                                    <a class="nav__link" href="">Контакти</a>
+                                    <a class="nav__link" href="#contact">Контакти</a>
                                 </li>
                                 <li class="nav__item">
                                     <a class="nav__link" href="tel:380960808868">096 080 88 68</a>
@@ -64,7 +63,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
             <img class="about__background" src="img/section/about/bg-about.png" alt="state" width="665">
             <div class="container">
                 <h2 class="about__title">Про нас</h2>
@@ -121,7 +120,7 @@
             </div>
         </section>
 
-        <section class="service">
+        <section class="service" id="service">
             <div class="container">
                 <h2 class="service__title">Наші послуги</h2>
                 <p class="service__desc">Виберіть необхідну послугу</p>
@@ -479,11 +478,12 @@
         </section>
 
         <section class="useful">
-            <div class="container">
+            <div class="container" id="useful">
                 <h2 class="useful__title">Корисні статті</h2>
                 <ul class="useful__list">
                     <li class="useful__item">
-                        <img src="img/section/useful/image-1.jpg" alt="women" class="useful__image" width="626">
+                        <img src="img/section/useful/image-1.jpg" alt="women" class="useful__image" width="626"
+                            height="356">
                         <h3 class="useful__subtitle">Як пережити втрату близького</h3>
                         <div class="useful__block">
                             <p class="useful__desc">Втрата близької людини – це одне із найважчих випробувань, з
@@ -493,11 +493,12 @@
                                 того, який був зв'язок, втрата може залишити людину в стані глибокого горя та болю...
                             </p>
                             <button class="useful__full js-read-first">Читати статтю <img src="img/icons/long-arrow.svg"
-                                    alt="arrow" class="useful__arrow" width="81"></button>
+                                    alt="arrow" class="useful__arrow" width="81" height="16"></button>
                         </div>
                     </li>
                     <li class="useful__item">
-                        <img src="img/section/useful/image-2.jpg" alt="women" class="useful__image" width="626">
+                        <img src="img/section/useful/image-2.jpg" alt="women" class="useful__image" width="626"
+                            height="356">
                         <h3 class="useful__subtitle">Як віддати почесті покійному</h3>
                         <div class="useful__block">
                             <p class="useful__desc">Коли людина йде з життя, це завжди трагічний момент та час для горя
@@ -506,14 +507,87 @@
                                 почесті
                                 тим, хто пішов від нас....</p>
                             <button class="useful__full js-read-second">Читати статтю <img
-                                    src="img/icons/long-arrow.svg" alt="arrow" class="useful__arrow"
-                                    width="81"></button>
+                                    src="img/icons/long-arrow.svg" alt="arrow" class="useful__arrow" width="81"
+                                    height="16"></button>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
+
+        <section class="contact" id="contact">
+            <img class="contact__background" src="img/section/contact/bg-contact.png" alt="man" width="507">
+            <div class="container">
+                <h2 class="contact__title">Контакти</h2>
+                <div class="contact__content">
+                    <div class="contact__phone">
+                        <p>Телефон для зв'язку</p>
+                        <a href="tel:0960808868">0960808868</a>
+                    </div>
+                    <form class="contact__form">
+                        <input class="contact__input" type="text" name="name" placeholder="Ваше ім'я">
+                        <input class="contact__input" type="text" name="phone" placeholder="Ваш телефон">
+                        <button type="submit" class="contact__submit">Зв'язатися зі мною</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section class="review">
+            <div class="container">
+                <h2 class="review__title">Відгуки</h2>
+                <ul class="review__list">
+                    <li class="review__item">
+                        <div class="review__profile">
+                            <img src="img/section/review/review-user-1.jpg" alt="profile" class="profile__image"
+                                width="128" height="128">
+                            <p class="profile__name">Олександр</p>
+                        </div>
+                        <p class="review__text">Дуже дякую за допомогу та піклування. Дякую що швидко відгукнулись.
+                            Швидко допомогли. Мінімум питань. Чіткий план дії. Все знали заздалегідь. Тому ми витратили
+                            мінімум часу на організацію і все пройшло гладко. Ми віддали шану нашому татові.</p>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__profile">
+                            <img src="img/section/review/review-user-2.jpg" alt="profile" class="profile__image"
+                                width="128" height="128">
+                            <p class="profile__name">Марія</p>
+                        </div>
+                        <p class="review__text">Те що з нами сталося було звісно не очікувано. Ми були розгублені. Не
+                            знали що робити, за що хапатися. Один дзвінок все змінив. Прийшов консультант, розклав нам
+                            все по полицях. Розповів які документи потрібні.</p>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__profile">
+                            <img src="img/section/review/review-user-3.jpg" alt="profile" class="profile__image"
+                                width="128" height="128">
+                            <p class="profile__name">Миколай</p>
+                        </div>
+                        <p class="review__text">Те що з нами сталося було звісно не очікувано. Ми були розгублені. Не
+                            знали що робити, за що хапатися. Один дзвінок все змінив. Прийшов консультант, розклав нам
+                            все по полицях. Розповів які документи потрібні.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <button class="scroll__top js-scroll-top"></button>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <img src="img/section/footer/logo.svg" alt="logo" class="footer__logo_mob" width="243">
+            <div class="footer__contact">
+                <p>Телефон для зв’язку</p>
+                <a href="tel:0960808868">096 080 88 68</a>
+            </div>
+            <img src="img/section/footer/logo.svg" alt="logo" class="footer__logo" width="243">
+            <div class="footer__lang">
+                <a href="#">UA</a>
+                <a href="#">RU</a>
+            </div>
+        </div>
+    </footer>
 
     <div class="backdrop">
         <div class="modal">
@@ -531,7 +605,7 @@
             <button class="close__button js-close-article">
                 <img src="img/icons/close.svg" alt="close-icon" width="75" height="75">
             </button>
-            <img class="article__image" src="img/section/article/image-1.jpg" alt="women" width="933">
+            <img class="article__image" src="img/section/article/image-1.jpg" alt="women" width="933" height="356">
             <h1 class="article__title">Як пережити втрату близького</h1>
             <p class="article__desc">Втрата близької людини - це одне із найважчих випробувань, з яким може зіткнутися
                 людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно від того, яким був зв'язок,
@@ -625,7 +699,7 @@
             <button class="close__button js-close-article">
                 <img src="img/icons/close.svg" alt="close-icon" width="75" height="75">
             </button>
-            <img class="article__image" src="img/section/article/image-2.jpg" alt="women" width="933">
+            <img class="article__image" src="img/section/article/image-2.jpg" alt="women" width="933" height="356">
             <h1 class="article__title">Як пережити втрату близького</h1>
             <p class="article__desc">Втрата близької людини - це одне із найважчих випробувань, з яким може зіткнутися
                 людина. Це може бути член сім'ї, друг чи колега по роботі, і незалежно від того, яким був зв'язок,
