--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
             </div>
             <img src="img/section/footer/logo.svg" alt="logo" class="footer__logo" width="243">
             <div class="footer__lang">
-                <a href="#">UA</a>
-                <a href="#">RU</a>
+                <a>UA</a>
+                <a href="ru/index.html">RU</a>
             </div>
         </div>
     </footer>
@@ -725,7 +725,7 @@
                 чимало
                 послуг різних людей. Цей процес можна організувати самостійно, але без підготовки це може зайняти чимало
                 часу.</p>
-            <p class="article__desc mt-30">чимало часу.Нижче ми перерахуємо всі дії, які можна зробити, щоб максимально
+            <p class="article__desc mt-30">Чимало часу.Нижче ми перерахуємо всі дії, які можна зробити, щоб максимально
                 віддати почесті покійному.</p>
             <ul class="article__list-3">
                 <li class="article__item">
